# SMA_TEST

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml  cmake-single-platform.yml  main.yml  simple_workflow.yml
src/: add.cpp
